# aesthetic-statusbar-cc

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
config/: default.json
src/aesthetic_statusbar/: __init__.py  bars.py  cli.py  colors.py  config.py  data.py  formatters.py  pets.py  renderer.py
